main_app/static/css/style.css
*{
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}
body {
  background-color: rgb(17, 16, 22);
  color: white;
  position: relative;
  min-height: 100vh;
}

.header{
  width: 100%;
  height: 80px;
  display: block;
  background-color: rgba(38, 38, 50);
}

.inner_header{
  width: 1000px;
  height: 100%;
  
  display: block;
  margin: 0 auto;
}


.logo_container{
  height: 100%;
  display: table;
  float: left;
}

.logo_container a img{
  vertical-align: middle;
  height: 80px;
  width: 80px;
  padding: 10px;
  border-radius: 10px;
}

.logo_container a img:hover{
    background-color: white;
    color: rgba(38, 38, 50);
}

.nav{
  float: right;
  height: 100%;
}

.nav a:hover{
    background-color: white;
    color: rgba(38, 38, 50);
}

.nav a{
  height: 100%;
  display: table;
  float: left;
  padding: 10px 10px;
  border-radius: 20px;
  color: white;
  text-decoration: none;
}

.nav a li{
  display: table-cell;
  vertical-align: middle;
}

.App {
  text-align: center;
}


.body{
  display: flex;
  align-items: center;
  justify-content: center;
  padding-bottom: 2.5rem;
}

.container{
  display:flex;
  justify-content: center;
  align-items: center;
  max-width: 1200px;
  flex-wrap: wrap;
  padding: 40px;
}

.card
{
  position: relative;
  min-width: 320px;
  height: 300px;
  background-color: rgba(17, 16, 22);
  box-shadow: inset 5px 5px 5px rgba(0,0,0,0.05),
              inset -5px -5px -5px rgba(255,255,255,0.5),
              5px 5px 5px rgba(0,0,0,0.05),
              -5px -5px -5px rgba(255,255,255,0.5);
  border-radius: 15px;
  margin: 30px;
}

.box {
  position: absolute;
  top: 10px;
  left: 10px;
  right: 10px;
  bottom: 10px;
  background-color: rgb(17, 16, 22);
  box-shadow: -15px -15px 15px(255,255,255,0.2),
              15px 15px 15px rgba(0,0,0,0.1),
              inset -5px -5px 5px rgba(255,255,255,0.2),
              inset 5px 5px 5px rgba(0,0,0,0.1);
  border-radius: 10px;
}

.content{
  padding: 20px;
  text-align: center;
}

#main{
  padding-bottom: 2.5rem;
}

.footer {
  position: absolute;
  bottom: 0;
  width: 100%;
  height: 2.5rem;
  text-align: center;
  
  background-color: rgba(38, 38, 50);
  color: white;
}

